--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "kysely": "^0.24.2",
+    "mysql2": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
