--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
 
     "skipLibCheck": true,
-
+    "allowSyntheticDefaultImports": true,
     /* Bundler mode */
     "moduleResolution": "node",
     "allowImportingTsExtensions": true,
