--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "eslint": "^8.39.0",
         "husky": "^8.0.3",
+        "prettier": "^2.8.8",
         "typescript": "*"
     }
 }
