--- a/packages/dnd/api/package.json
+++ b/packages/dnd/api/package.json
@@ -8,18 +8,13 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/body-parser": "^1.19.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "vite": "^4.0.4",
     "vite-plugin-node": "^3.0.2"
   },
   "dependencies": {
-    "@apollo/server": "^4.7.0",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "graphql-yoga": "^3.9.1",
     "kysely": "^0.24.2",
     "mysql2": "^3.2.4",
     "ts-node": "^10.9.1",
