--- a/packages/dnd/api/package.json
+++ b/packages/dnd/api/package.json
@@ -17,6 +17,7 @@
     "graphql-yoga": "^3.9.1",
     "kysely": "^0.24.2",
     "mysql2": "^3.2.4",
+    "openai": "^3.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
