--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
         "husky": "^8.0.3",
         "prettier": "^2.8.8",
         "typescript": "*"
+    },
+    "dependencies": {
+        "hygen": "^6.2.11"
     }
 }
